--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -41,7 +41,7 @@ There are some important notations that you should take note of when reading thi
 In this user guide, you will see certain icons that will aid in highlighting tips and important information that will help and instruct you on things to take note of when using Volant.
 
 .Table of Icons
-[cols="1, 2", options="header"]
+[cols="1, 3", options="header"]
 |=================
 |Icon       |Meaning
 a|image::user-guide/tip_icon.png[] | This icon denotes useful tips to note when using Volant.
@@ -54,7 +54,7 @@ There will also be certain markdown notations to distinguish between normal text
 
 
 .Table of Markdown Notations
-[cols="1, 2", options="header"]
+[cols="1, 3", options="header"]
 |=================
 |Markdown       |Meaning
 |kbd:[Enter] kbd:[F1] kbd:[F5] | This markdown notation highlights keys to press on your keyboard.
@@ -85,7 +85,9 @@ These include front-end features that users can interact with, such as the Trip 
 === Trips
 If you would like to plan for an upcoming trip overseas, you can create a new `TRIP`.
 
-In Volant, a `TRIP` represents a set of travel plans to a certain location within a date range. You can able to create and store trips in Volant to keep track of all your travels, and plan your future travels.
+In Volant, a `TRIP` represents a set of travel plans to a certain `LOCATION` within a date range.
+You can able to create and store trips in Volant to keep track of all your travels, and plan your future travels, and label
+each `TRIP` with a specific `TRIP_NAME`.
 
 Each `TRIP` contains trip features such as an `ITINERARY` and `JOURNAL` to help you convenintly keep track of all things
 associated with your `TRIP`!
@@ -106,9 +108,19 @@ If you would like to plan the activities to do on your trip, you can do so in th
 This itinerary feature enables you to keep track of your daily activities planned for your trip.
 All activities are sorted in chronological order by default, with newest entries at the top.
 
-=== Auto-Saving of Data
+=== Data Storage and Auto-Saving of Data
 In Volant, every `TRIP` you create will generate a folder named after the `TRIP` 's `TRIP_NAME` within the *data* folder within
-the directory you have stored in Volant JAR file in. This folder will store all data associated with your trip including the `TRIP` 's `ITINERARY` and `JOURNAL`.
+the directory you have stored in Volant JAR file in. This folder will store all data associated with your `TRIP` 's `ITINERARY` and `JOURNAL`.
+
+The data folder also contains a file, `volant.json` that stores your trip list and their details such as the `TRIP_NAME`, `LOCATION` and date range of all your trips
+
+[caption=]
+.Simple diagram of data storage in Volant
+image::user-guide/data-storage.png[width="600"]
+
+IMPORTANT: Please do not touch or edit the `volant.json` file or the data of all your trips might be lost!
+
+*Auto-saving of Data*
 
 If you are concerned that you may forget to save your data every now and then, do not fret!
 All changes in data will automatically be saved upon every command that you gives to Volant.
@@ -125,8 +137,8 @@ This section covers the different commands that you can use on the pages in Vola
 === Understanding Volant's GUI
 This section covers the different components of a page in Volant and teaches you on how to utilise Volant's GUI.
 
-[caption=]
 .The different components of a page in Volant
+[caption=]
 image::user-guide/page-components.png[width="600"]
 
 There are four major components that you will be using in Volant, which will be referenced in the upcoming sections.
@@ -224,15 +236,15 @@ TIP: You can also execute this command by using the kbd:[F5] key on your keyboar
 
 *Expected Outcome*
 
-For example, after using the `find` command on the `HOME` page, the `HOME` page will display the results of the `find` command.
+For example, after using the `find` command (See <<home-find>>) on the `HOME` page, the `HOME` page will display the results of the `find` command.
 To return the `HOME` page to its original state (listing all trips), you can use the `rf` command.
 
 [caption=]
-.After using the `find` command on the `HOME` page, only the results of the command will be displayed.
+.1) After you have used the `find` command on the `HOME` page, only the results of the command will be displayed.
 image::user-guide/refresh-command-before.png[width="400"]
 
 [caption=]
-.After using the `rf` command, the `HOME` page will return to its original state and will list all trips.
+.2) After using the `rf` command, the `HOME` page will return to its original state and will list all trips.
 image::user-guide/refresh-command-after.png[width="400"]
 
 
@@ -435,7 +447,7 @@ image::user-guide/home-edit-before.png[width="400"]
 .After using the `edit` command, the `TRIP_NAME` and `LOCATION` of the trip will be changed accordingly.
 image::user-guide/home-edit-after.png[width="400"]
 
-
+[[home-find]]
 ==== Finding a trip in the list: `find`
 If you would like to search for a specific trip in your trip list, you can use the `find` command to locate any trip with a
 a specific `KEYWORD` in its name.
