--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -19,11 +19,12 @@ endif::[]
 By: `AY1920S2-2103T-F09-4`      Since: `Jan 2020`      Licence: `MIT`
 
 == Introduction
+Hello! This document is a user guide written for prospective users of our travel companion, Volant. It will cover
+how to use and navigate through Volant's features to help you with your travel planning.
 
 Volant is a travel companion application for solo travellers for who *prefer to use a desktop app to manage their travels*.
-This user guide aims to provide users with information on how to use each and every function of the Volant app.
 
-
+[caption=]
 .Home page of Volant
 image::Ui.png[width="790"]
 
@@ -44,8 +45,9 @@ In this user guide, you will see certain icons that will aid in highlighting tip
 [cols="1, 3", options="header"]
 |=================
 |Icon       |Meaning
-a|image::user-guide/tip_icon.png[] | This icon denotes useful tips to note when using Volant.
-a|image::user-guide/info_icon.png[]  | This icon denotes important details to take note of when using Volant.
+a|image::user-guide/tip_icon.png[]          | This icon denotes useful tips to note when using Volant.
+a|image::user-guide/info_icon.png[]         | This icon denotes important details to take note of when using Volant.
+a|image::user-guide/important_icon.png[]    | This icon denotes extremely important details to take note of. When these details are not followed, Volant may crash or have its data files corrupted.
 |=================
 
 ==== Markdown Notations
@@ -144,7 +146,7 @@ image::user-guide/page-components.png[width="600"]
 There are four major components that you will be using in Volant, which will be referenced in the upcoming sections.
 
 . *Menu bar* +
-    The menu bar contains clickable buttons that you can use to execute certain commands, such as
+    The menu bar contains clickable buttons that you can use to execute certain commands, such as <<refresh, `rf` to refresh a page>>, and <<help, `help` to open the help window>>.
 
 . *Result Display* +
     The result display displays feedback from Volant to you after you have executed a command in Volant.
@@ -199,6 +201,7 @@ e.g `n/NAME [a/AGE]` can be used as `n/John Doe a/26` or as `n/John Doe`.
 === Universal Commands
 Universal commands are commands that can be used on all pages.
 
+[[help]]
 ==== Opening the Help window: `help`
 Opens the Help window.
 
@@ -278,7 +281,7 @@ image::user-guide/back-command-after.png[width="400"]
 [TIP]
 ====
 [caption=]
-.Table of possible outcome for the `back` Command
+.Table of outcomes when using the `back` command on certain pages
 [cols="1, 2", options="header,footer"]
 |=======================
 |Your current page      | Outcome
@@ -309,13 +312,13 @@ For example, if you would like to return to the `HOME` page of Volant from a spe
 command will conveniently move you directly to the `HOME` page.
 
 [caption=]
-.You are on the `ITINERARY` page of a specific `TRIP`
+.1) You are on the `ITINERARY` page of a specific `TRIP`
 image::user-guide/back-command-before.png[width="400"]
 
 
 
 [caption=]
-.After using the `home` command, you will be moved to the `HOME` page
+.2) After using the `home` command, you will be moved to the `HOME` page
 image::user-guide/home-page.png[width="400"]
 
 === Commands for the Home Page
@@ -344,11 +347,11 @@ NOTE: `INDEX` must be a positive integer value, within range of the number of en
 For example, you are on the `HOME` page and would like to navigate to the `TRIP` page of the trip, _Winter Break_.
 
 [caption=]
-.You are on the `HOME` page and you want to navigate to the `TRIP` page of the 3rd `TRIP`, _Winter Break_.
+.1) You are on the `HOME` page and you want to navigate to the `TRIP` page of the 3rd `TRIP`, _Winter Break_.
 image::user-guide/home-goto-before.png[width="400"]
 
 [caption=]
-.After using command `goto 3` you will be navigated to the 3rd `TRIP`, _Winter Break_.
+.2) After using command `goto 3` you will be navigated to the 3rd `TRIP`, _Winter Break_.
 image::user-guide/home-goto-after.png[width="400"]
 
 
@@ -376,11 +379,11 @@ and date range of the trip being from *1st February 2020* to *5th February 2020*
 to your trip list.
 
 [caption=]
-.You would like to add a `TRIP` to your trip list and enter the `add` command including the specific metadata of the `TRIP`
+.1) You would like to add a `TRIP` to your trip list and enter the `add` command including the specific metadata of the `TRIP`
 image::user-guide/home-add-before.png[width="400"]
 
 [caption=]
-.After using the `add` command, the new `TRIP` will be added to your trip list and displayed under _UPCOMING TRIPS_.
+.2) After using the `add` command, the new `TRIP` will be added to your trip list and displayed under _UPCOMING TRIPS_
 image::user-guide/home-add-after.png[width="400"]
 
 
@@ -408,11 +411,11 @@ For example, you would like to delete the second trip on your trip list, _Gradua
 `TRIP` will be removed from your trip list.
 
 [caption=]
-.You want to delete the second trip on your trip list, _Graduation Trip_.
+.1) You want to delete the second trip on your trip list, _Graduation Trip_
 image::user-guide/home-delete-before.png[width="400"]
 
 [caption=]
-.After using the `delete` command, the trip will be removed from your trip list.
+.2) After using the `delete` command, the trip will be removed from your trip list
 image::user-guide/home-delete-after.png[width="400"]
 
 
@@ -440,11 +443,11 @@ For example, you would like to edit the details of the first trip on your trip l
 the `TRIP_NAME` of the `TRIP`, from _Family Trip_ to _Family Trip 2020_, and the `LOCATION` of the `TRIP` from _Berlin_ to _Frankfurt_.
 
 [caption=]
-.You want to edit the `TRIP_NAME` and `LOCATION` of the first trip in your trip list.
+.1) You want to edit the `TRIP_NAME` and `LOCATION` of the first trip in your trip list
 image::user-guide/home-edit-before.png[width="400"]
 
 [caption=]
-.After using the `edit` command, the `TRIP_NAME` and `LOCATION` of the trip will be changed accordingly.
+.2) After using the `edit` command, the `TRIP_NAME` and `LOCATION` of the trip will be changed accordingly
 image::user-guide/home-edit-after.png[width="400"]
 
 [[home-find]]
@@ -467,10 +470,7 @@ them on the `HOME` page.
 ====
 * The `KEYWORD` parameter is case insensitive, meaning that using the `KEYWORD` "fUji" will return all trips with the word
 "fuji" in their names regardless of the case of each character.
-* If you would like to revert the `HOME` page to its original state after viewing the results of the `find` command, you can
-use the `rf` command to refresh the page. +
-+
-See <<refresh>> for more details.
+
 ====
 
 *Expected Outcome*
@@ -479,13 +479,16 @@ For example, you would like search for a trip on the trip list with the `KEYWORD
 Volant will locate all `TRIP` s with the `KEYWORD`, "fuji".
 
 [caption=]
-.You want to search for all `TRIP` s with names containing the `KEYWORD`, "fuji".
+.1) You want to search for all `TRIP` s with names containing the `KEYWORD`, "fuji"
 image::user-guide/home-find-before.png[width="400"]
 
 [caption=]
-.After using the `find` command, Volant will display all trips with the specified `KEYWORD`.
+.2) After using the `find` command, Volant will display all trips with the specified `KEYWORD`
 image::user-guide/home-find-after.png[width="400"]
 
+TIP: If you would like to revert the `HOME` page to its original state after viewing the results of the `find` command, you can
+use the `rf` command to refresh the page. +
+See <<refresh>> for more details.
 
 === Commands for the Trip Page
 
@@ -505,7 +508,7 @@ If you would like to access either the `JOURNAL` or `ITINERARY` of the trip, thi
 
 [NOTE]
 ====
-* List of available `TRIP_FEATURE` (can be typed in any case):
+* List of available `TRIP_FEATURE` (case insensitive):
 ** `itinerary`
 ** `journal`
 * `TRIP_FEATURE` shortcuts are also available:
@@ -739,32 +742,32 @@ Sorts the list of journal entries by alphabetical order of locations.
 INSERT DIAGRAM HERE.
 
 == FAQ
-This section discusses some frequently asked questions about the Volant app.
+This section discusses some frequently asked questions about Volant.
 
-*Q*: Is Volant free? +
+*Q: Is Volant free?* +
 *A*: Yes, Volant is absolutely free to use!
 
-*Q*: Is Volant safe to use? +
+*Q: Is Volant safe to use?* +
 *A*: Yes, Volant is safe to use! We regularly review our code to ensure that hackers are unable to exploit the security structure of our software.
 
-*Q*: Is Volant secure? +
+*Q: Is Volant secure?* +
 *A*: Yes, Volant is secure. Your data is stored only on your device. No data is sent to any online servers.
 
-*Q*: Do I need an Internet connection to use Volant? +
+*Q: Do I need an Internet connection to use Volant?* +
 *A*: No, you don't! Volant works 100% offline. This is especially useful when you travel to locations where Internet connection is spotty, or even scarce.
 
-*Q*: Will Volant be consistently updated? +
+*Q: Will Volant be consistently updated?* +
 *A*: Yes! We are a dedicated team of software developers who constantly collate feedback and run tests on the Volant app. We are also looking forward to delivering more features for our users.
 
-*Q*: Can I use Volant on a mobile device? +
+*Q: Can I use Volant on a mobile device?* +
 *A*: Volant is designed to work best on a desktop/laptop/tablet interface. We are currently adapting Volant's user interface to support more mobile devices.
 
-*Q*: How do I transfer my data to another device? +
+*Q: How do I transfer my data to another device?* +
 *A*: Install the app in the other device and overwrite the empty data file it creates with the file that contains the data of your previous Volant folder.
 
 == Command Summary
 This section summarises the syntax of all the commands available in the Volant app.
-Use this list as a quick reference.
+Use this list as a quick and convenient reference.
 
 === Home Page
 * *Help*: `help` +
@@ -789,6 +792,13 @@ Use this list as a quick reference.
 * *Sort entries*: `sort [SORT_TYPE]` +
 
 == Glossary
-This section discusses some terminology that has been used in this user guide.
+This section will cover and explain certain technical/Volant specific terms that we have used in this user guide.
 
-* *TBC:* To be completed
+[cols="1, 3", options="header"]
+|==============
+|Term                           | Explanation
+|Command Line Interface (CLI)   | A user interface where users are required to use the program by entering commands into a text box.
+|Graphical User Interface (GUI) | A user interface that includes visuals such as buttons, icons, images, menus etc.
+|Metadata                       | Details associated with  an entity. For example, metadata of a `TRIP` include the `TRIP` 's, `TRIP_NAME`, `LOCATION`, `TRIP_START_DATE`, `TRIP_END_DATE`
+
+|==============
